--- a/coffee-house/style.css
+++ b/coffee-house/style.css
@@ -827,28 +827,32 @@ button {
     align-self: center;
 }
 
-.burger-popup {
-    display: none;
+.burger-popup { 
     flex-direction: column;
     width: 100%;
     position: absolute;
     top: 80px;
     z-index: 1000;
-    background-color:#E1D4C9;
+    background-color: #E1D4C9;
     padding: 80px 40px;
     gap: 96px;
     height: 100%;
-    animation: menuAppend 1s; 
+    right: -100%;
+    display:flex;
+    transform: scale(0);
+    transition: right 1s, transform 0s;
+    transition-delay: 0s, 1s;
+}
+
+.burger-popup.open{
+    transform: scale(1);
     right: 0;
+    transition: right 1s;
 }
 
 
 
 
-@keyframes menuAppend {
-    0% { right: -100%; }
-    100% { right: 0; }   
-}
 
 
 
